Debug: Tuples in the recipes

--- a/French_Recipe.ipynb
+++ b/French_Recipe.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -181,36 +181,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3843\n"
+      "Number of sorted unique pairs: 2716\n",
+      "[(('低筋麵粉', '鹽'), 15), (('低筋麵粉', '無鹽奶油'), 12), (('雞蛋', '牛奶'), 12), (('無鹽奶油', '鹽'), 11), (('低筋麵粉', '牛奶'), 10), (('無鹽奶油', '細砂糖'), 10), (('牛奶', '奶油'), 9), (('低筋麵粉', '細砂糖'), 9), (('牛奶', '鹽'), 8), (('鹽', '水'), 8), (('細白砂糖', '覆盆子果泥'), 8), (('低筋麵粉', '砂糖'), 8), (('牛奶', '香草精'), 8), (('低筋麵粉', '雞蛋'), 8), (('牛奶', '蜂蜜'), 8)]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(('法國麵包', '牛蕃茄'), 1),\n",
-       " (('法國麵包', '起司絲'), 1),\n",
-       " (('法國麵包', '雞肉丁'), 1),\n",
-       " (('牛蕃茄', '起司絲'), 1),\n",
-       " (('牛蕃茄', '雞肉丁'), 1),\n",
-       " (('起司絲', '雞肉丁'), 1),\n",
-       " (('派皮材料', '低筋麵粉'), 1),\n",
-       " (('派皮材料', '無鹽奶油'), 1),\n",
-       " (('派皮材料', '糖粉'), 1),\n",
-       " (('派皮材料', '鹽'), 1)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "occurence = [(g[0], len(list(g[1]))) for g in itertools.groupby(result)]\n",
-    "num = 0\n",
-    "for k in occurence:\n",
-    "    num = num + k[1]\n",
-    "print(num)\n",
-    "sorted(occurence, key = lambda x : x[1], reverse = True)[:10]"
+    "import operator\n",
+    "from collections import Counter\n",
+    "myDict = Counter(result)\n",
+    "sorted_x = sorted(myDict.items(), key = operator.itemgetter(1), reverse = True)\n",
+    "print('Number of sorted unique pairs:', len(sorted_x))\n",
+    "print(sorted_x[:15])"
    ]
   },
   {
