--- a/Hakka_Recipe.ipynb
+++ b/Hakka_Recipe.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -173,36 +173,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5285\n"
+      "Number of sorted unique pairs: 3473\n",
+      "[(('芹菜', '醬油'), 15), (('辣椒', '米酒'), 15), (('蒜頭', '米酒'), 14), (('芹菜', '辣椒'), 14), (('醬油', '米酒'), 14), (('蒜頭', '醬油'), 14), (('辣椒', '醬油'), 13), (('蝦米', '醬油'), 12), (('蝦米', '胡椒粉'), 12), (('芹菜', '米酒'), 11), (('醬油', '水'), 11), (('醬油', '糖'), 10), (('醬油', '胡椒粉'), 10), (('辣椒', '醬油膏'), 10), (('蒜頭', '辣椒'), 10)]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(('綠層', '在來米粉'), 1),\n",
-       " (('綠層', '地瓜粉'), 1),\n",
-       " (('綠層', '椰漿'), 1),\n",
-       " (('綠層', '牛奶'), 1),\n",
-       " (('綠層', '細砂糖'), 1),\n",
-       " (('綠層', '抹茶粉'), 1),\n",
-       " (('綠層', '黃色層'), 1),\n",
-       " (('綠層', '地瓜粉'), 1),\n",
-       " (('綠層', '在來米粉'), 1),\n",
-       " (('綠層', '椰漿'), 1)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "occurence = [(g[0], len(list(g[1]))) for g in itertools.groupby(result)]\n",
-    "num = 0\n",
-    "for k in occurence:\n",
-    "    num = num + k[1]\n",
-    "print(num)\n",
-    "sorted(occurence, key = lambda x : x[1], reverse = True)[:10]"
+    "import operator\n",
+    "from collections import Counter\n",
+    "myDict = Counter(result)\n",
+    "sorted_x = sorted(myDict.items(), key = operator.itemgetter(1), reverse = True)\n",
+    "print('Number of sorted unique pairs:', len(sorted_x))\n",
+    "print(sorted_x[:15])"
    ]
   },
   {
