--- a/Italy_Recipe.ipynb
+++ b/Italy_Recipe.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -181,36 +181,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4473\n"
+      "Number of sorted unique pairs: 3297\n",
+      "[(('洋蔥', '黑胡椒'), 17), (('洋蔥', '橄欖油'), 16), (('洋蔥', '鹽'), 14), (('洋蔥', '月桂葉'), 11), (('洋蔥', '白酒'), 10), (('鹽', '黑胡椒'), 9), (('洋蔥', '紅酒'), 8), (('洋蔥', '番茄醬'), 8), (('洋蔥', '鹽巴'), 7), (('洋蔥', '義大利香料'), 7), (('鹽', '橄欖油'), 7), (('黑胡椒', '橄欖油'), 7), (('蒜頭', '月桂葉'), 6), (('洋蔥', '紅蘿蔔'), 6), (('紅蘿蔔', '鹽'), 6)]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(('牛番茄', '洋蔥'), 1),\n",
-       " (('牛番茄', '紅蘿蔔'), 1),\n",
-       " (('牛番茄', '馬鈴薯'), 1),\n",
-       " (('牛番茄', '西式芹菜'), 1),\n",
-       " (('牛番茄', '去骨雞腿'), 1),\n",
-       " (('牛番茄', '巴西里'), 1),\n",
-       " (('牛番茄', '鹽'), 1),\n",
-       " (('牛番茄', '黑胡椒'), 1),\n",
-       " (('牛番茄', '橄欖油'), 1),\n",
-       " (('牛番茄', '月桂葉'), 1)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "occurence = [(g[0], len(list(g[1]))) for g in itertools.groupby(result)]\n",
-    "num = 0\n",
-    "for k in occurence:\n",
-    "    num = num + k[1]\n",
-    "print(num)\n",
-    "sorted(occurence, key = lambda x : x[1], reverse = True)[:10]"
+    "import operator\n",
+    "from collections import Counter\n",
+    "myDict = Counter(result)\n",
+    "sorted_x = sorted(myDict.items(), key = operator.itemgetter(1), reverse = True)\n",
+    "print('Number of sorted unique pairs:', len(sorted_x))\n",
+    "print(sorted_x[:15])"
    ]
   },
   {
