--- a/Japan_Recipe.ipynb
+++ b/Japan_Recipe.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -181,36 +181,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2854\n"
+      "Number of sorted unique pairs: 2328\n",
+      "[(('醬油', '酒'), 6), (('白蘿蔔', '蒟蒻'), 6), (('醬油', '砂糖'), 6), (('紅蘿蔔', '蒟蒻'), 5), (('白蘿蔔', '紅蘿蔔'), 5), (('砂糖', '酒'), 5), (('牛蒡', '醬油'), 4), (('糖', '鹽'), 4), (('牛蒡', '味醂'), 4), (('蛋', '醬油'), 4), (('高湯', '味醂'), 4), (('酒', '醬油'), 4), (('洋蔥', '紅蘿蔔'), 4), (('牛蒡', '蒟蒻'), 4), (('米', '酒'), 4)]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(('蛋', '動物性鮮奶油'), 1),\n",
-       " (('蛋', '鹽巴'), 1),\n",
-       " (('蛋', '胡椒粉'), 1),\n",
-       " (('蛋', '牛番茄'), 1),\n",
-       " (('蛋', '洋蔥'), 1),\n",
-       " (('蛋', '紅蘿蔔'), 1),\n",
-       " (('蛋', '白蘿蔔'), 1),\n",
-       " (('蛋', '菇類'), 1),\n",
-       " (('蛋', '牛肉片'), 1),\n",
-       " (('蛋', '原味無糖優格'), 1)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "occurence = [(g[0], len(list(g[1]))) for g in itertools.groupby(result)]\n",
-    "num = 0\n",
-    "for k in occurence:\n",
-    "    num = num + k[1]\n",
-    "print(num)\n",
-    "sorted(occurence, key = lambda x : x[1], reverse = True)[:10]"
+    "import operator\n",
+    "from collections import Counter\n",
+    "myDict = Counter(result)\n",
+    "sorted_x = sorted(myDict.items(), key = operator.itemgetter(1), reverse = True)\n",
+    "print('Number of sorted unique pairs:', len(sorted_x))\n",
+    "print(sorted_x[:15])"
    ]
   },
   {
