--- a/Summer_Recipe.ipynb
+++ b/Summer_Recipe.ipynb
@@ -164,45 +164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3416\n"
+      "Number of sorted unique pairs: 2779\n",
+      "[(('冬瓜', '薑'), 8), (('薑', '鹽'), 8), (('米酒', '糖'), 6), (('小黃瓜', '糖'), 6), (('醬油', '糖'), 6), (('鳳梨', '檸檬'), 5), (('鹽', '糖'), 5), (('檸檬', '百香果'), 5), (('米酒', '檸檬汁'), 4), (('薑片', '米酒'), 4), (('洋蔥', '鹽'), 4), (('小黃瓜', '鹽'), 4), (('冰糖', '檸檬'), 4), (('冬瓜', '鹽'), 4), (('紅棗', '鹽'), 4)]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(('排骨', '鹽'), 2),\n",
-       " (('冬瓜', '鹽'), 2),\n",
-       " (('菇', '鹽'), 2),\n",
-       " (('油蔥丸', '鹽'), 2),\n",
-       " (('薑', '鹽'), 2),\n",
-       " (('鳳梨', '檸檬'), 2),\n",
-       " (('冰糖', '檸檬'), 2),\n",
-       " (('鳳梨果醬', '檸檬'), 2),\n",
-       " (('排骨', '鹽'), 2),\n",
-       " (('冬瓜', '鹽'), 2)]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "occurence = [(g[0], len(list(g[1]))) for g in itertools.groupby(result)]\n",
-    "num = 0\n",
-    "for k in occurence:\n",
-    "    num = num + k[1]\n",
-    "print(num)\n",
-    "sorted(occurence, key = lambda x : x[1], reverse = True)[:10]"
+    "import operator\n",
+    "from collections import Counter\n",
+    "myDict = Counter(result)\n",
+    "sorted_x = sorted(myDict.items(), key = operator.itemgetter(1), reverse = True)\n",
+    "print('Number of sorted unique pairs:', len(sorted_x))\n",
+    "print(sorted_x[:15])"
    ]
   },
   {
