--- a/Taiwan_Recipe.ipynb
+++ b/Taiwan_Recipe.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -173,36 +173,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4836\n"
+      "Number of sorted unique pairs: 3295\n",
+      "[(('太白粉', '水'), 18), (('醬油', '米酒'), 18), (('醬油', '糖'), 14), (('米酒', '糖'), 12), (('蛋', '水'), 11), (('蒜頭', '醬油'), 11), (('小白菜', '水'), 11), (('水', '糖'), 10), (('水', '米酒'), 10), (('-', '-'), 10), (('水', '醬油'), 10), (('水', '鹽'), 9), (('水', '水'), 9), (('糖', '水'), 9), (('蒜頭', '米酒'), 9)]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(('-', '-'), 10),\n",
-       " (('豬絞肉', '-'), 5),\n",
-       " (('油蔥酥', '-'), 5),\n",
-       " (('水', '-'), 5),\n",
-       " (('調味料', '-'), 5),\n",
-       " (('蝦仁', '太白粉'), 2),\n",
-       " (('小白菜', '太白粉'), 2),\n",
-       " (('蛋', '太白粉'), 2),\n",
-       " (('蝦仁', '太白粉'), 2),\n",
-       " (('小白菜', '太白粉'), 2)]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "occurence = [(g[0], len(list(g[1]))) for g in itertools.groupby(result)]\n",
-    "num = 0\n",
-    "for k in occurence:\n",
-    "    num = num + k[1]\n",
-    "print(num)\n",
-    "sorted(occurence, key = lambda x : x[1], reverse = True)[:10]"
+    "import operator\n",
+    "from collections import Counter\n",
+    "myDict = Counter(result)\n",
+    "sorted_x = sorted(myDict.items(), key = operator.itemgetter(1), reverse = True)\n",
+    "print('Number of sorted unique pairs:', len(sorted_x))\n",
+    "print(sorted_x[:15])"
    ]
   },
   {
