--- a/Winter_Recipe.ipynb
+++ b/Winter_Recipe.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -172,36 +172,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2388\n"
+      "Number of sorted unique pairs: 1606\n",
+      "[(('老薑', '米酒'), 20), (('米酒', '鹽'), 17), (('米酒', '麻油'), 16), (('老薑', '麻油'), 16), (('麻油', '米酒'), 15), (('米酒', '枸杞'), 15), (('老薑', '鹽'), 14), (('老薑', '枸杞'), 14), (('麻油', '鹽'), 12), (('麻油', '水'), 11), (('枸杞', '米酒'), 10), (('枸杞', '鹽'), 10), (('米酒', '水'), 10), (('老薑', '黑麻油'), 9), (('米酒', '老薑'), 8)]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(('紅面番鴨', '水'), 2),\n",
-       " (('薑母', '水'), 2),\n",
-       " (('黑麻油', '水'), 2),\n",
-       " (('薑母鴨中藥包', '水'), 2),\n",
-       " (('甘蔗', '水'), 2),\n",
-       " (('水', '純米酒'), 2),\n",
-       " (('土雞', '老薑'), 1),\n",
-       " (('土雞', '紅棗'), 1),\n",
-       " (('土雞', '枸杞'), 1),\n",
-       " (('土雞', '麻油'), 1)]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "occurence = [(g[0], len(list(g[1]))) for g in itertools.groupby(result)]\n",
-    "num = 0\n",
-    "for k in occurence:\n",
-    "    num = num + k[1]\n",
-    "print(num)\n",
-    "sorted(occurence, key = lambda x : x[1], reverse = True)[:10]"
+    "import operator\n",
+    "from collections import Counter\n",
+    "myDict = Counter(result)\n",
+    "sorted_x = sorted(myDict.items(), key = operator.itemgetter(1), reverse = True)\n",
+    "print('Number of sorted unique pairs:', len(sorted_x))\n",
+    "print(sorted_x[:15])"
    ]
   },
   {
