--- a/China_Recipe.ipynb
+++ b/China_Recipe.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -181,36 +181,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5599\n"
+      "Number of sorted unique pairs: 3859\n",
+      "[(('醬油', '糖'), 19), (('醬油', '香油'), 18), (('醬油', '米酒'), 15), (('鹽', '糖'), 13), (('薑末', '醬油'), 12), (('醬油', '鹽'), 12), (('醬油', '水'), 11), (('蔥', '醬油'), 11), (('蒜末', '醬油'), 11), (('鹽', '水'), 11), (('豬絞肉', '醬油'), 11), (('薑', '醬油'), 10), (('青蔥', '醬油'), 10), (('薑末', '米酒'), 10), (('薑末', '糖'), 9)]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(('蛤蜊', '九層塔'), 1),\n",
-       " (('蛤蜊', '蒜頭'), 1),\n",
-       " (('蛤蜊', '烏醋'), 1),\n",
-       " (('蛤蜊', '水'), 1),\n",
-       " (('蛤蜊', '沙拉油'), 1),\n",
-       " (('九層塔', '蒜頭'), 1),\n",
-       " (('九層塔', '烏醋'), 1),\n",
-       " (('九層塔', '水'), 1),\n",
-       " (('九層塔', '沙拉油'), 1),\n",
-       " (('蒜頭', '烏醋'), 1)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "occurence = [(g[0], len(list(g[1]))) for g in itertools.groupby(result)]\n",
-    "num = 0\n",
-    "for k in occurence:\n",
-    "    num = num + k[1]\n",
-    "print(num)\n",
-    "sorted(occurence, key = lambda x : x[1], reverse = True)[:10]"
+    "import operator\n",
+    "from collections import Counter\n",
+    "myDict = Counter(result)\n",
+    "sorted_x = sorted(myDict.items(), key = operator.itemgetter(1), reverse = True)\n",
+    "print('Number of sorted unique pairs:', len(sorted_x))\n",
+    "print(sorted_x[:15])"
    ]
   },
   {
